# liver-calculator

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  apri_report.py  data_completeness.py  data_mod.py  de_ritis_report.py  docker-compose.yml  fib4_report.py  log_reg_cross.py  lr_calibrated_triage_meta.json  lr_calibrated_triage_report.txt  meta_kalkulator_log.py  meta_kalkulator_log_no_grey.py  model_f1_f4.py  nafld-report.py  pyproject.toml  random_forest_triage.py  rf_calibrated_triage_report.txt  ver4.py
.github/workflows/: ci.yml
Data/: README.md
Data/FIB4/: Fscore-No-Cat-Imp-2-Class-FIB4.csv  Fscore-No-Cat-Imp-3-Class-FIB4.csv  Fscore-No-Cat-Imp-FIB4.csv
Data/Helpers/: Fscore-OR-predictions.csv
Data/NAFLD/: Fscore-No-Cat-Imp-3-Class-NAFLD.csv  Fscore-No-Cat-Imp-NAFLD.csv
Data/Original/: FibroScan-PUT-Fscore-No-Cat.csv  FibroScan-PUT-Fscore-imputed.csv  FibroScan-PUT-Modified.csv  FibroScan-PUT-results.csv  missing_per_patient.csv  missing_per_variable.csv
Data/RITIS/: Fscore-No-Cat-Imp-3-Class-RITIS.csv  Fscore-No-Cat-Imp-RITIS.csv
Data/Test-group/: control-imp-2-class.csv  control.csv
Results/APRI/: report.txt
Results/FIB4/: report_age.txt
Results/NAFLD/: report_BMI_20.txt
archive/artifacts/: formula_f2_dual_hifi.tex  formula_f2_dual_light.txt
archive/disagreements/: ANY_OR_FN.csv  ANY_OR_FN1.csv  ANY_OR_FP.csv  ANY_OR_FP1.csv  raport_kalkulatory_any_or_low.csv  test_FN_ruleout_geF2_FULLROWS.csv
archive/old_calc/: ver4.py
calc_rf_reports/: triage_fixed_full_report.txt  triage_fixed_report.txt
calculator-analysis/: apri_3_class_report.py  apri_report.py  de_ritis_report.py  fib4_report.py  nafld-report.py  nafld_report.py
docs/: project-structure.md
legacy/: README.md
legacy/scripts/: calc_comp.py  data_analysis.py  decision_tree.py  decision_tree_cross.py  meta_kalkulator_rf.py  (+3 more)
models/: README.md  lr_calibrated_triage_model.joblib  rf_calibrated_triage_model.joblib
references/: README.md
scripts/: serve_api.py  train_meta_logistic.py
tests/: test_api.py  test_scoring.py  test_web.py
(+99 files in other folders)
