[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liver-meta-calculator"
version = "0.1.0"
description = "ML engineer and data scientist oriented scaffold for a liver fibrosis meta-calculator."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Adam" }
]
dependencies = [
  "fastapi>=0.115",
  "jinja2>=3.1",
  "joblib>=1.4",
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.7",
  "scikit-learn>=1.5",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
  "ruff>=0.6",
]
train = [
  "matplotlib>=3.9",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"liver_calculator.web" = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
